--- a/order-tracker/index.html
+++ b/order-tracker/index.html
@@ -120,7 +120,7 @@ dialog[open]{ display:block; }
     <select id="fltSales" class="select"><option value="">All salespeople</option></select>
     <select id="fltStatus" class="select"><option value="">All status</option><option>Open</option><option>Closed</option><option>Problem</option></select>
     <select id="fltPriority" class="select"><option value="">All priorities</option><option>High</option><option selected>Normal</option><option>Low</option></select>
-    <button class="btn" onclick="openModal(null); return false;">+ New Order</button>
+    <button id="btnNew" class="btn" type="button">+ New Order</button>
     <button class="btn ghost" id="btnCsv">Export CSV</button>
   </div>
 
@@ -266,7 +266,7 @@ const todayStr = () => new Date().toISOString().slice(0,10);
 const curSym = c => ({USD:'$', GBP:'£', EUR:'€'})[c||'USD'] || '$';
 const fmt = n => (n == null || isNaN(n)) ? '-' : Number(n).toLocaleString(undefined,{minimumFractionDigits:2,maximumFractionDigits:2});
 const fmtInt = n => (n == null || isNaN(n)) ? '-' : Number(n).toLocaleString();
-const esc = s => (s ?? '').toString().replace(/[&<>\"']/g, m => ({'&':'&amp;','<':'&lt;','>':'&gt;','\"':'&quot;","'":'&#39;'}[m]));
+const esc = s => (s ?? '').toString().replace(/[&<>"']/g, m => ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;','\'':'&#39;'}[m]));
 const age = d => d ? (Math.max(0, Math.floor((Date.now() - new Date(d)) / 86400000)) + ' d') : '-';
 function setToast(msg, danger=false){const t=$('toast');t.textContent=msg;t.style.background=danger?'#b21a1a':'#111';t.style.opacity='1';setTimeout(()=>t.style.opacity='0',1500);}
 
@@ -512,6 +512,7 @@ function shipsFromDOM(){
 function openModalById(id){ openModal(supa.state.orders.find(x=>x.id===id)); }
 function openModal(o){
   window.openModal = openModal;
+  window.openModal = openModal;
   $('dlgTitle').textContent = o ? 'Edit Order' : 'New Order';
   $('orderId').value = o?.id || '';
   $('salesperson').innerHTML = SALESTEAM.map(n=>`<option>${n}</option>`).join('');
@@ -740,7 +741,8 @@ async function addNoteFromEdit(){
 
 /* ======== filters init ======== */
 function initFilters(){
-  $('fltSales').innerHTML = '<option value="">All salespeople</option>' + SALESTEAM.map(n=>`<option>${n}</option>`).join('');
+    if (document.getElementById('btnNew')) document.getElementById('btnNew').onclick = () => openModal(null);
+$('fltSales').innerHTML = '<option value="">All salespeople</option>' + SALESTEAM.map(n=>`<option>${n}</option>`).join('');
   $('btnCsv').onclick = exportCsv;
   $('q').oninput = render;
   $('fltSales').onchange = render;
