--- a/index.html
+++ b/index.html
@@ -6,340 +6,126 @@
   <title>Verified Electronics — Tools</title>
   <link rel="icon" href="data:;base64,iVBORw0KGgo=" />
   <style>
-    /* ===== Light theme (default) ===== */
-    :root{
+    :root {
       --brand:#6f57e9; --brand2:#3b2eca; --ink:#1e2330; --muted:#6d7486;
       --bg:#f7f8fc; --card:#fff; --line:#e8eaf3; --shadow:0 12px 30px rgba(5,10,30,.08);
       --chip:#f1f2f7;
     }
-
     *{box-sizing:border-box}
     html,body{height:100%}
-    body{margin:0;font:15px/1.5 system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Cantarell,Noto Sans,Arial,"Apple Color Emoji","Segoe UI Emoji";background:
+    body{margin:0;font:15px/1.5 system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Cantarell,Noto Sans,Arial;background:
       radial-gradient(900px 420px at -10% -10%, rgba(111,87,233,.08), transparent 40%),
       radial-gradient(700px 360px at 110% 0%, rgba(59,46,202,.06), transparent 40%),
       var(--bg);color:var(--ink)}
-
     .wrap{max-width:1200px;margin:0 auto;padding:26px}
-
-    /* Topbar */
     .top{display:flex;align-items:center;gap:12px}
     .brand{display:flex;align-items:center;gap:10px;font-weight:800;font-size:18px}
-    .dot{width:12px;height:12px;border-radius:50%;background:linear-gradient(135deg,var(--brand),var(--brand2));box-shadow:0 0 0 6px rgba(111,87,233,16)}
+    .dot{width:12px;height:12px;border-radius:50%;background:linear-gradient(135deg,var(--brand),var(--brand2));box-shadow:0 0 0 6px rgba(111,87,233,.16)}
     .beta{margin-left:8px;font-size:12px;padding:2px 8px;border-radius:999px;border:1px solid var(--line);color:var(--muted);background:var(--chip)}
     .right{margin-left:auto;display:flex;gap:10px;align-items:center}
-    input.search{min-width:280px;padding:11px 14px;border-radius:999px;border:1px solid var(--line);background:#fff;color:inherit}
-    .toggle{display:inline-flex;align-items:center;gap:8px;padding:9px 12px;border-radius:999px;border:1px solid var(--line);background:#fff;cursor:pointer}
-
-    /* Grid */
+    input.search{min-width:280px;padding:11px 14px;border-radius:999px;border:1px solid var(--line);background:#fff}
+    .toggle{padding:9px 12px;border-radius:999px;border:1px solid var(--line);background:#fff;cursor:pointer}
     .grid{display:grid;grid-template-columns:repeat(12,1fr);gap:16px;margin-top:18px}
-    .card{grid-column:span 4;background:var(--card);border:1px solid var(--line);border-radius:18px;box-shadow:var(--shadow);transition:transform .12s ease, box-shadow .12s ease, border-color .12s ease;position:relative;overflow:hidden}
+    .card{grid-column:span 4;background:var(--card);border:1px solid var(--line);border-radius:18px;box-shadow:var(--shadow);transition:transform .12s, box-shadow .12s;border-color:var(--line);position:relative}
     @media(max-width:1000px){.card{grid-column:span 6}}
     @media(max-width:640px){.card{grid-column:span 12}}
     .card:hover{transform:translateY(-3px);border-color:#cfcfff}
-    .cd-hd{padding:16px 16px 0 16px;display:flex;align-items:center;gap:12px}
+    .cd-hd{padding:16px 16px 0;display:flex;align-items:center;gap:12px}
     .icon{width:40px;height:40px;border-radius:12px;background:linear-gradient(135deg,var(--brand),var(--brand2));display:grid;place-items:center;color:#fff;font-weight:700;font-size:18px}
     .ttl{font-weight:800}
-    .desc{color:var(--muted);font-size:13px;padding:6px 16px 0 16px}
+    .desc{color:var(--muted);font-size:13px;padding:6px 16px 0}
     .cd-ft{display:flex;gap:10px;align-items:center;justify-content:space-between;padding:14px 16px}
-    .btn{appearance:none;border:0;border-radius:12px;padding:10px 14px;font-weight:700;background:linear-gradient(135deg,var(--brand),var(--brand2));color:#fff;cursor:pointer;text-decoration:none;display:inline-flex}
+    .btn{border:0;border-radius:12px;padding:10px 14px;font-weight:700;background:linear-gradient(135deg,var(--brand),var(--brand2));color:#fff;cursor:pointer;text-decoration:none;display:inline-flex}
     .btn.ghost{background:transparent;color:var(--brand);border:1px solid var(--brand)}
-    .btn[disabled]{opacity:.6;cursor:not-allowed}
     .tag{font-size:11px;padding:2px 8px;border-radius:999px;background:var(--chip);border:1px solid var(--line);color:var(--muted)}
-
-    /* Emoji bubble */
-    .bubble{position:absolute;right:10px;top:10px;font-size:20px;opacity:.92}
-
-    /* Helper */
+    .bubble{position:absolute;right:10px;top:10px;font-size:20px;opacity:.9}
     .hidden{display:none}
-
-    /* Compact mode tweaks */
-    .compact .card{border-radius:14px}
-    .compact .icon{width:34px;height:34px;border-radius:10px}
-    .compact .cd-ft{padding:10px 16px}
   </style>
 </head>
 <body>
-  <div class="wrap">
-    <div class="top">
-      <div class="brand"><span class="dot"></span> Verified Electronics — Tools <span class="beta">internal</span></div>
-      <div class="right">
-        <input id="search" class="search" placeholder="Search tools… (⌘/Ctrl+K)" />
-        <div class="toggle" id="compactToggle" role="button" aria-pressed="false">Compact</div>
-      </div>
-    </div>
-
-    <div id="cards" class="grid">
-      <!-- Document/PDF Editor -->
-      <article class="card" data-title="document pdf editor annotate whiteout tools">
-        <div class="bubble">🧰</div>
-        <div class="cd-hd">
-          <div class="icon">DX</div>
-          <div class="ttl">Document/PDF Editor</div>
-        </div>
-        <p class="desc">In-browser toolkit for whiteout, text, shapes and signatures. Ideal for quick doc tweaks.</p>
-        <div class="cd-ft">
-          <a class="btn" href="pdf-editor/index.html">Open</a>
-          <span class="tag">Utilities</span>
-        </div>
-      </article>
-
-      <!-- E-Signature & Stamp -->
-      <article class="card" data-title="signature signer pad stamp draw resize">
-        <div class="bubble">🖊️</div>
-        <div class="cd-hd">
-          <div class="icon">✒️</div>
-          <div class="ttl">E-Signature & Stamp</div>
-        </div>
-        <p class="desc">Create/resize signatures and stamps, export on transparent background for use across docs.</p>
-        <div class="cd-ft">
-          <a class="btn" href="sign/index.html">Open</a>
-          <span class="tag">Sign</span>
-        </div>
-      </article>
-
-      <!-- Excess Part Checker -->
-      <article class="card" data-title="excess part checker search matches datasets">
-        <div class="bubble">🔎</div>
-        <div class="cd-hd">
-          <div class="icon">EX</div>
-          <div class="ttl">Excess Part Checker</div>
-        </div>
-        <p class="desc">Batch look-up of MPNs against internal excess datasets. Exact or fuzzy, CSV import, clean UI.</p>
-        <div class="cd-ft">
-          <a class="btn" href="excess-checker/index.html">Open</a>
-          <span class="tag">Data</span>
-        </div>
-      </article>
-
-      <!-- Live Order Tracker -->
-      <article class="card" data-title="orders live tracker status finance notes">
-        <div class="bubble">📈</div>
-        <div class="cd-hd">
-          <div class="icon">OT</div>
-          <div class="ttl">Live Order Tracker</div>
-        </div>
-        <p class="desc">Track orders, view financials roll-up (cost, testing, shipping, GP) and add internal notes.</p>
-        <div class="cd-ft">
-          <a class="btn" href="order-tracker/index.html">Open</a>
-          <span class="tag">Ops</span>
-        </div>
-      </article>
-
-      <!-- Sales Order Confirmation -->
-      <article class="card" data-title="so sales order confirmation docs">
-        <div class="bubble">🧾</div>
-        <div class="cd-hd">
-          <div class="icon">SO</div>
-          <div class="ttl">Sales Order Confirmation</div>
-        </div>
-        <p class="desc">Generate & send clean sales order confirmations with your company details baked in.</p>
-        <div class="cd-ft">
-          <a class="btn" href="so-confirmation/index.html">Open</a>
-          <span class="tag">Docs</span>
-        </div>
-      </article>
-
-      <!-- RMA Generator -->
-      <article class="card" data-title="rma return material authorization generator">
-        <div class="bubble">📦</div>
-        <div class="cd-hd">
-          <div class="icon">RMA</div>
-          <div class="ttl">RMA Generator</div>
-        </div>
-        <p class="desc">Generate branded Return Material Authorization PDFs with traceability, item details and policies.</p>
-        <div class="cd-ft">
-          <a class="btn" href="rma/index.html">Open</a>
-          <span class="tag">Docs</span>
-        </div>
-      </article>
-
-      <!-- Auto IC Source Uploader -->
-      <article class="card" data-title="auto ic source uploader normalise map dedupe">
-        <div class="bubble">📤</div>
-        <div class="cd-hd">
-          <div class="icon">AU</div>
-          <div class="ttl">Auto IC Source Uploader</div>
-        </div>
-        <p class="desc">Upload and normalise supplier stock/excess files. Cleaning, mapping and de-dupe built-in.</p>
-        <div class="cd-ft">
-          <button id="sendNowBtn" class="btn">Send Now</button>
-          <a class="btn ghost" href="auto-ic/logs.html">Logs</a>
-          <span class="tag">Data</span>
-        </div>
-      </article>
-
-      <!-- COC Generator -->
-      <article class="card" data-title="coc generator certificate of conformance">
-        <div class="bubble">📜</div>
-        <div class="cd-hd">
-          <div class="icon">CC</div>
-          <div class="ttl">COC Generator</div>
-        </div>
-        <p class="desc">Generate and format Certificates of Conformance with consistent company details.</p>
-        <div class="cd-ft">
-          <a class="btn" href="coc.index.html">Open</a>
-          <span class="tag">Docs</span>
-        </div>
-      </article>
-
-      <!-- Commercial Invoice & Packing List Generator -->
-      <article class="card" data-title="commercial invoice packing list generator customs shipping ci pl">
-        <div class="bubble">💳</div>
-        <div class="cd-hd">
-          <div class="icon">CI</div>
-          <div class="ttl">Commercial Invoice &amp; Packing List Generator</div>
-        </div>
-        <p class="desc">Create compliant commercial invoices and packing lists for global shipments in minutes.</p>
-        <div class="cd-ft">
-          <a class="btn" href="commercial-invoice/index.html">Open</a>
-          <span class="tag">Docs</span>
-        </div>
-      </article>
-
-      <!-- Company Info (coming soon) -->
-      <article class="card" aria-disabled="true" data-title="company info addresses vat bank certificates">
-        <div class="bubble">🏢</div>
-        <div class="cd-hd">
-          <div class="icon">CO</div>
-          <div class="ttl">Company Info</div>
-        </div>
-        <p class="desc">Addresses, VAT numbers, bank details, certificates — everything in one place for quick copy/paste.</p>
-        <div class="cd-ft">
-          <button class="btn ghost" disabled>Coming soon</button>
-          <span class="tag">Reference</span>
-        </div>
-      </article>
-
-      <!-- Distribution Stock Monitor (coming soon) -->
-      <article class="card" aria-disabled="true" data-title="distribution stock monitor">
-        <div class="bubble">🧭</div>
-        <div class="cd-hd">
-          <div class="icon">SM</div>
-          <div class="ttl">Distribution Stock Monitor</div>
-        </div>
-        <p class="desc">Monitor key franchised stock/price moves by brand & MPN. Alerts for opportunities.</p>
-        <div class="cd-ft">
-          <button class="btn ghost" disabled>Coming soon</button>
-          <span class="tag">Research</span>
-        </div>
-      </article>
+<div class="wrap">
+  <div class="top">
+    <div class="brand"><span class="dot"></span> Verified Electronics — Tools <span class="beta">internal</span></div>
+    <div class="right">
+      <input id="search" class="search" placeholder="Search tools… (⌘/Ctrl+K)" />
+      <div class="toggle" id="compactToggle">Compact</div>
     </div>
   </div>
 
-  <script>
-    // Search (also Ctrl/⌘+K focus)
-    const search = document.getElementById('search');
-    const cards = [...document.querySelectorAll('.card')];
-    const grid = document.getElementById('cards');
+  <div id="cards" class="grid">
 
-    function filter(){
-      const q = (search.value||'').toLowerCase().trim();
-      cards.forEach(c=>{
-        const hit = c.dataset.title?.includes(q) || c.querySelector('.ttl').textContent.toLowerCase().includes(q);
-        c.classList.toggle('hidden', q && !hit);
-      });
-      grid.style.opacity = 1;
-    }
-    search.addEventListener('input', filter);
-    window.addEventListener('keydown', e=>{
-      if((e.ctrlKey||e.metaKey) && e.key.toLowerCase()==='k'){ e.preventDefault(); search.focus(); }
-    });
+    <!-- Request a Quote -->
+    <article class="card" data-title="rfq request quote sales purchasing pricing">
+      <div class="bubble">💬</div>
+      <div class="cd-hd">
+        <div class="icon">RQ</div>
+        <div class="ttl">Request a Quote</div>
+      </div>
+      <p class="desc">
+        Central RFQ dashboard for sales & purchasing. Log part requests, target prices, track vendor replies,
+        and monitor quote progress per salesperson with Supabase sync.
+      </p>
+      <div class="cd-ft">
+        <a class="btn" href="rfq/index.html">Open</a>
+        <span class="tag">Sales</span>
+      </div>
+    </article>
 
-    // Compact mode (denser cards)
-    const compactBtn = document.getElementById('compactToggle');
-    compactBtn.addEventListener('click', ()=>{
-      const on = document.body.classList.toggle('compact');
-      compactBtn.setAttribute('aria-pressed', on?'true':'false');
-    });
+    <!-- Existing tools below -->
+    <article class="card"><div class="bubble">🧰</div><div class="cd-hd"><div class="icon">DX</div><div class="ttl">Document/PDF Editor</div></div>
+      <p class="desc">In-browser toolkit for whiteout, text, shapes and signatures. Ideal for quick doc tweaks.</p>
+      <div class="cd-ft"><a class="btn" href="pdf-editor/index.html">Open</a><span class="tag">Utilities</span></div></article>
 
-    // === Auto IC: trigger Cloudflare Worker ===
-    const WORKER_URL = 'https://young-firefly-7d18.nick-north.workers.dev/';
-    const UI_SHARED_TOKEN = 'icsource-7d4f2a9d81-Prod';
+    <article class="card"><div class="bubble">🖊️</div><div class="cd-hd"><div class="icon">✒️</div><div class="ttl">E-Signature & Stamp</div></div>
+      <p class="desc">Create/resize signatures and stamps, export on transparent background for use across docs.</p>
+      <div class="cd-ft"><a class="btn" href="sign/index.html">Open</a><span class="tag">Sign</span></div></article>
 
-    const sendBtn = document.getElementById('sendNowBtn');
-    if (sendBtn) {
-      sendBtn.addEventListener('click', async () => {
-        if (!confirm('Send inventory to IC Source now?')) return;
+    <article class="card"><div class="bubble">🔎</div><div class="cd-hd"><div class="icon">EX</div><div class="ttl">Excess Part Checker</div></div>
+      <p class="desc">Batch look-up of MPNs against internal excess datasets. Exact or fuzzy, CSV import, clean UI.</p>
+      <div class="cd-ft"><a class="btn" href="excess-checker/index.html">Open</a><span class="tag">Data</span></div></article>
 
-        const orig = sendBtn.textContent;
-        sendBtn.disabled = true;
-        sendBtn.textContent = 'Sending…';
+    <article class="card"><div class="bubble">📈</div><div class="cd-hd"><div class="icon">OT</div><div class="ttl">Live Order Tracker</div></div>
+      <p class="desc">Track orders, view financial roll-up (cost, testing, shipping, GP) and add internal notes.</p>
+      <div class="cd-ft"><a class="btn" href="order-tracker/index.html">Open</a><span class="tag">Ops</span></div></article>
 
-        try {
-          const res = await fetch(WORKER_URL, {
-            method: 'POST',
-            headers: {
-              'Content-Type': 'application/json',
-              'Authorization': `Bearer ${UI_SHARED_TOKEN}`
-            },
-            body: JSON.stringify({ dry_run: false })
-          });
+    <article class="card"><div class="bubble">🧾</div><div class="cd-hd"><div class="icon">SO</div><div class="ttl">Sales Order Confirmation</div></div>
+      <p class="desc">Generate & send clean sales order confirmations with your company details baked in.</p>
+      <div class="cd-ft"><a class="btn" href="so-confirmation/index.html">Open</a><span class="tag">Docs</span></div></article>
 
-          let data = null;
-          try { data = await res.json(); } catch {}
-          if (res.ok && (data?.ok || data?.success || data?.status==='ok')) {
-            alert('Upload triggered ✅\n\nCheck Actions → "Upload Excess to IC Source" for run details.');
-          } else {
-            const msg = data?.error || `${res.status} ${res.statusText}`;
-            alert('Failed to trigger upload:\n' + msg);
-          }
-        } catch (err) {
-          alert('Network error: ' + (err?.message || err));
-        } finally {
-          sendBtn.disabled = false;
-          sendBtn.textContent = orig;
-        }
-      });
-    }
-  </script>
+    <article class="card"><div class="bubble">📦</div><div class="cd-hd"><div class="icon">RMA</div><div class="ttl">RMA Generator</div></div>
+      <p class="desc">Generate branded Return Material Authorization PDFs with traceability, item details and policies.</p>
+      <div class="cd-ft"><a class="btn" href="rma/index.html">Open</a><span class="tag">Docs</span></div></article>
+
+    <article class="card"><div class="bubble">📤</div><div class="cd-hd"><div class="icon">AU</div><div class="ttl">Auto IC Source Uploader</div></div>
+      <p class="desc">Upload and normalise supplier stock/excess files. Cleaning, mapping and de-dupe built-in.</p>
+      <div class="cd-ft"><button id="sendNowBtn" class="btn">Send Now</button><a class="btn ghost" href="auto-ic/logs.html">Logs</a><span class="tag">Data</span></div></article>
+
+    <article class="card"><div class="bubble">📜</div><div class="cd-hd"><div class="icon">CC</div><div class="ttl">COC Generator</div></div>
+      <p class="desc">Generate and format Certificates of Conformance with consistent company details.</p>
+      <div class="cd-ft"><a class="btn" href="coc.index.html">Open</a><span class="tag">Docs</span></div></article>
+
+    <article class="card"><div class="bubble">💳</div><div class="cd-hd"><div class="icon">CI</div><div class="ttl">Commercial Invoice & Packing List Generator</div></div>
+      <p class="desc">Create compliant commercial invoices and packing lists for global shipments in minutes.</p>
+      <div class="cd-ft"><a class="btn" href="commercial-invoice/index.html">Open</a><span class="tag">Docs</span></div></article>
+  </div>
+</div>
+
+<script>
+const search=document.getElementById('search');
+const cards=[...document.querySelectorAll('.card')];
+const grid=document.getElementById('cards');
+function filter(){
+  const q=(search.value||'').toLowerCase().trim();
+  cards.forEach(c=>{
+    const hit=c.dataset.title?.includes(q)||c.querySelector('.ttl').textContent.toLowerCase().includes(q);
+    c.classList.toggle('hidden',q&&!hit);
+  });
+}
+search.addEventListener('input',filter);
+window.addEventListener('keydown',e=>{
+  if((e.ctrlKey||e.metaKey)&&e.key.toLowerCase()==='k'){e.preventDefault();search.focus();}
+});
+document.getElementById('compactToggle').onclick=()=>document.body.classList.toggle('compact');
+</script>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
